--- a/cpu.cabal
+++ b/cpu.cabal
@@ -28,7 +28,7 @@ Library
 
   C-sources:   cbits/endian.c
 
-  if arch(x86)
+  if arch(i386)
     Cpp-options: -DARCH_X86
   if arch(x86_64)
     Cpp-options: -DARCH_X86_64
@@ -59,7 +59,7 @@ Library
   if arch(vax)
     Cpp-options: -DARCH_VAX
 
-  if arch(x86) || arch(x86_64)
+  if arch(i386) || arch(x86_64)
     C-sources:   cbits/cpuid.c
 
 executable           cpuid
